[metadata]
name = astley
version = 0.0.2
author = Navami Vipith Kumar
author_email = navamioct25@gmail.com
description = An exploration into package making.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/navamivk/Astley
project_urls =
    Bug Tracker = https://github.com/navamivk/Astley/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src